kubernetes/apps/miniflux/miniflux.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: productivity
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: productivity
  labels:
    app.kubernetes.io/name: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: miniflux
  template:
    metadata:
      labels:
        app.kubernetes.io/name: miniflux
    spec:
      containers:
      - name: miniflux
        image: miniflux/miniflux:latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 20m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: productivity
  labels:
    app.kubernetes.io/name: miniflux
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app.kubernetes.io/name: miniflux
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux-ingress
  namespace: productivity
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: rss.vijaysingh.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miniflux
            port:
              number: 80
